# bookbytes

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md.docker  Readme.md  alembic.ini  app.py  cli.py  docker-compose.yml  docker-healthcheck.sh  docker-run.sh  env.example  logger.py  requirements.txt  test_app.py
.agent/rules/: pythonic-fastapi-async.md  typescript-next-guidelines.md
.github/: copilot-instructions.md
alembic/: env.py
backend/: Readme.md  pyproject.toml
backend/alembic/versions/: 001_pg_idkit_extension.py  2232afba1a25_add_jobs_and_audio_book_jobs_tables.py  80de24a1ee9e_add_audio_books_library_models.py
backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
backend/src/bookbytes/: __init__.py  config.py  main.py
backend/src/bookbytes/api/: __init__.py
backend/src/bookbytes/api/v1/: processing.py  router.py  search.py
backend/src/bookbytes/core/: __init__.py  database.py  exceptions.py  logging.py
backend/src/bookbytes/models/: __init__.py  api_cache.py  audio_book.py  audio_book_job.py  base.py  book_provider.py  chapter.py  edition.py  job.py  work.py
backend/src/bookbytes/repositories/: __init__.py  audio_book.py  audio_book_job.py  book_provider.py  chapter.py  edition.py  job.py  work.py
backend/src/bookbytes/schemas/: __init__.py  common.py  processing.py  search.py
backend/src/bookbytes/services/: __init__.py  cache.py  library.py  openlibrary.py
backend/src/bookbytes/workers/: __init__.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_health.py  test_library_service.py  test_openlibrary_api.py  test_search_endpoints.py
backend/tests/mocks/: __init__.py  openai_responses.py
backend/tests/unit/: test_cache_service.py  test_library_service.py  test_openlibrary_service.py  test_processing_endpoints.py  test_search_endpoints.py
docker/: Dockerfile
frontend/: .gitignore  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: BottomNav.tsx  Layout.tsx  Navbar.tsx  PageContainer.tsx
frontend/src/components/player/: AudioPlayer.tsx
frontend/src/components/ui/: book-card.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts
frontend/src/pages/: BookDetails.tsx  Home.tsx  Library.tsx
frontend/src/store/: useAudioStore.ts
knowledge/: docs.md
src/bookbytes/: dependencies.py  main.py
src/bookbytes/api/v1/: __init__.py
src/bookbytes/models/: __init__.py
src/bookbytes/repositories/: __init__.py  base.py
src/bookbytes/services/: __init__.py
src/bookbytes/storage/: __init__.py
tasks/backend-productionisation/: prd-backend-productionisation.md  tasks-backend-productionisation.md  technical-considerations-backend-productionisation.md
tasks/backend-productionisation/audio-books-library/: design-doc.md  tasks-audio-books-library.md
tasks/backend-productionisation/audio-books-pipeline/: design-doc.md  prd-audio-books-pipeline.md  tasks-audio-books-pipeline.md
tasks/frontend-development/: prd-frontend-development.md  tasks-frontend-development.md
tasks/knowledge/: multi-provider-integration-patterns.md
tests/: conftest.py
tests/integration/: test_database.py
tests/mocks/: openlibrary_responses.py
